fixed minor alignment and overflow issues

--- a/styles/stylesheet_times.css
+++ b/styles/stylesheet_times.css
@@ -11,16 +11,13 @@ body
 
 #content  /* selects all elements inside the body*/
 {
-  padding: 0px;
-  margin: 0px;
+  margin: 0px -8px -8px;
 }
 
 #grid-container 
 {
     display: grid; /*makes sure the grid actually displays as a grid*/
     gap: 50px; /*specifies the space between the different rows and collumns in the grid*/
-    height: 90vh; /*sets the height of the grid to 90% of the viewport height*/
-    width: calc(100vw-8px); /*sets the width of the grid to 100% of the viewport width*/
     grid-template-columns: auto auto;
     grid-template-rows: auto auto;
     align-content: center;
